# VideohubRoutingCli

./: .gitignore  Blockschalt.drawio  CMakeLists.txt  README.md
.github/workflows/: msvc.yml
Testing/: CmakeLists.txt  DataHandlerTests.cpp  ErrorTraceTests.cpp  MockupDeviceData.h  MockupServer.h  RouterApiTests.cpp  SqlAccessHandlerTests.cpp  TelnetClientTests.cpp  TestHeader.h  TestMainFile.cpp  config.h  config.h.in  sql_access_handler_tests.cpp  sql_access_tests.cpp  sql_interface_tests.cpp  sqltests.cpp
app/: cmakelists.txt  main.cpp  router_db
scripts/: GetSimulator.ps1
src/: RouterApi.cpp  RouterApi.hpp  SqliteInterface.cpp  SqliteInterface.hpp  TelnetClient.cpp  TelnetClient.hpp  cli.cpp  cli.hpp  cmakelists.txt  router_db
src/RouterApi/: CMakeLists.txt  RouterApi.cpp  RouterApi.hpp
src/RouterApi/DataHandler/: CMakeLists.txt  DataHandler.cpp  DataHandler.hpp
src/RouterApi/DeviceData/: CMakeLists.txt  DeviceData.cpp  DeviceData.hpp
src/RouterApi/ErrorTrace/: CMakeLists.txt  ErrorTrace.cpp  ErrorTrace.hpp
src/RouterApi/SqlAccessHandler/: CmakeLists.txt  SqlAccessHandler.cpp  SqlAccessHandler.hpp
src/RouterApi/TelnetClient/: CMakeLists.txt  TelnetClient.cpp  TelnetClient.hpp
src/RouterApi/headers/: device_data.hpp
src/RouterApi/sql_access/: CMakeLists.txt  sql_access.cpp
src/RouterApi/sql_interface/: CMakeLists.txt  DataHandler.hpp  SqliteInterface.cpp  SqliteInterface.hpp
src/RouterApi/sql_interface/sql_access/: CMakeLists.txt  sql_access.hpp  sql_access_handler.hpp
src/cli/: cli.cpp  cli.hpp  cmakelists.txt
src/headers/: device_data.hpp
src/sql_interface/: CMakeLists.txt
src/sql_interface/sql_access/: sql_access.cpp  sql_access.hpp
src/sqlite/: CMakeLists.txt
